Login page (sans hash)

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -27,6 +27,6 @@
     </context-param>
 
     <welcome-file-list>
-        <welcome-file>jsp/login</welcome-file>
+        <welcome-file>index</welcome-file>
     </welcome-file-list>
 </web-app>
