Fixed routing errors

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -26,7 +26,19 @@
         <param-value></param-value>
     </context-param>
 
+    <session-config>
+        <session-timeout>1</session-timeout>
+    </session-config>
+
+    <jsp-config>
+        <jsp-property-group>
+            <url-pattern>*.jsp</url-pattern>
+            <page-encoding>UTF-8</page-encoding>
+            <include-prelude>/WEB-INF/jsp/tag_libs.jsp</include-prelude>
+        </jsp-property-group>
+    </jsp-config>
+
     <welcome-file-list>
-        <welcome-file>index</welcome-file>
+        <welcome-file>login</welcome-file>
     </welcome-file-list>
 </web-app>
