--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -26,6 +26,10 @@
         <param-value></param-value>
     </context-param>
 
+    <session-config>
+        <session-timeout>30</session-timeout>
+    </session-config>
+
     <welcome-file-list>
         <welcome-file>index</welcome-file>
     </welcome-file-list>
